--- a/templates/components/account/user_comments.html
+++ b/templates/components/account/user_comments.html
@@ -39,8 +39,9 @@
                     <p>commented</p>
                     <p data-created-at="{{ comment.created_at }}">{{ comment.created_at }}</p>
                 </div>
+
                 <div class="text-sm">
-                    <span>{{ comment.comment }}</span>
+                    <span class = "post-conten">{{ comment.content }}</span>
                 </div>
             </div>
             <h1>TODO VOTES</h1>
