--- a/templates/components/account/user_overview.html
+++ b/templates/components/account/user_overview.html
@@ -46,7 +46,7 @@
                         <p data-created-at="{{ content.created_at }}">{{ content.created_at }}</p>
                     </div>
                     <div class="text-sm">
-                        <span>{{ content.content }}</span>
+                        <span class = "post-content">{{ content.content }}</span>
                     </div>
                 </div>
                 <h1>TODO VOTES</h1>
