--- a/templates/components/account/sign_in.html
+++ b/templates/components/account/sign_in.html
@@ -10,7 +10,7 @@
     <form
       method="POST"
       action="{% url 'account:sign_in' %}"
-      class="flex flex-col justify-center gap-4 rounded-2xl bg-white px-16 py-10 text-black dark:bg-dark_5 dark:text-white_1"
+      class="dark:bg-dark_5 dark:text-white_1 flex flex-col justify-center gap-4 rounded-2xl bg-white px-16 py-10 text-black"
     >
       {% csrf_token %}
       <h1 class="text-xl font-bold">Login</h1>
@@ -19,13 +19,13 @@
           <input
             name="email_or_username"
             id="sign_in_email_input"
-            class="border-1 dark:focus:border-blue-500 focus:border-blue-600 peer block w-full appearance-none rounded-lg border-gray-300 bg-white_1 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:outline-none focus:ring-0 dark:border-gray-600 dark:bg-dark_6 dark:text-white"
+            class="border-1 bg-white_1 dark:bg-dark_6 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
             placeholder=" "
             type="text"
           />
           <label
             for="sign_in_email_input"
-            class="peer-focus:text-blue-600 peer-focus:dark:text-blue-500 absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 dark:text-gray-400 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4"
+            class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 dark:text-gray-400 peer-focus:dark:text-blue-500"
             >Email or username</label
           >
         </div>
@@ -33,13 +33,13 @@
           <input
             id="sign_in_password"
             name="password"
-            class="border-1 dark:focus:border-blue-500 focus:border-blue-600 peer block w-full appearance-none rounded-lg border-gray-300 bg-white_1 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:outline-none focus:ring-0 dark:border-gray-600 dark:bg-dark_6 dark:text-white"
+            class="border-1 bg-white_1 dark:bg-dark_6 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
             type="password"
             placeholder=" "
           />
           <label
             for="sign_in_password"
-            class="peer-focus:text-blue-600 peer-focus:dark:text-blue-500 absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 dark:text-gray-400 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4"
+            class="absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 peer-focus:text-blue-600 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4 dark:text-gray-400 peer-focus:dark:text-blue-500"
             >Password</label
           >
         </div>
@@ -52,7 +52,7 @@
           data-modal-target="sign_up_modal"
           data-modal-toggle="sign_up_modal"
           data-modal-hide="sign_in_modal"
-          class="text-blue-500 cursor-pointer"
+          class="cursor-pointer text-blue-500"
         >
           Sign up now
         </button>
@@ -61,7 +61,7 @@
       <div class="flex flex-col gap-4">
         <button
           type="submit"
-          class="font-md w-full rounded-3xl bg-button_red px-3 py-2 text-white transition-all duration-300 ease-in-out hover:bg-button_red_hover hover:text-white"
+          class="font-md bg-button_red hover:bg-button_red_hover w-full rounded-3xl px-3 py-2 text-white transition-all duration-300 ease-in-out hover:text-white"
         >
           Login
         </button>
@@ -71,7 +71,7 @@
             id="g_id_onload"
             data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
             data-context="signin"
-            data-ux_mode="popup"
+            data-ux_mode="redirect"
             data-login_uri="http://localhost:8000/account/auth-receiver"
             data-auto_prompt="false"
           ></div>
@@ -89,3 +89,4 @@
     </form>
   </div>
 </div>
+
