--- a/templates/components/account/sign_up.html
+++ b/templates/components/account/sign_up.html
@@ -37,7 +37,7 @@
               id="g_id_onload"
               data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
               data-context="signin"
-              data-ux_mode="popup"
+              data-ux_mode="redirect"
               data-login_uri="http://localhost:8000/account/auth-receiver"
               data-auto_prompt="false"
             ></div>
