--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -210,9 +210,7 @@
   </div>
 </nav>
 
-{% if not request.user.is_authenticated %} {%include
-'components/account/sign_in.html'%} {%include
-'components/account/sign_up.html'%} {% endif %}
+{% if not request.user.is_authenticated %} {%include 'components/account/sign_in.html'%} {%include 'components/account/sign_up.html'%} {% endif %}
 
 <script>
   function toggleProfileOptions() {
